Fix text alignment in small card
It's confusing when status can be small/large and card can small/large too

--- a/src/components/status.css
+++ b/src/components/status.css
@@ -461,7 +461,7 @@
   background-color: var(--bg-color);
   max-height: 160px;
 }
-.status.large .card.link.large {
+.status.large .card.link {
   border-radius: 16px;
   flex-direction: column;
   max-height: none;
@@ -493,7 +493,7 @@
   flex-grow: 1;
   align-self: center;
 }
-.card.large .meta-container {
+.status.large .card.link.large .meta-container {
   align-self: flex-start;
 }
 .card .title {
